# pi

./: 50-step-plan-physics-engine.md  50-step-plan-scripting-engine.md  _test_phase1.py  config_profiles.json  game.py  interaction_matrix.json  physics_validation.json
powder_cpp/: CMakeLists.txt  README.md
powder_cpp/benchmarks/: CMakeLists.txt  bench_stub.cpp
powder_cpp/cmake/: CompilerOptions.cmake  DetectSIMD.cmake
powder_cpp/include/powder/app/: Cli.hpp  Console.hpp
powder_cpp/include/powder/core/: BuildInfo.hpp  CpuFeatures.hpp  DeterministicBootstrap.hpp  Field2D.hpp  KernelRegistry.hpp  MathPrimitives.hpp  Memory.hpp  RuntimePlacement.hpp
powder_cpp/include/powder/render/: Renderer.hpp  RuntimeShell.hpp
powder_cpp/include/powder/script/: LuaSandbox.hpp
powder_cpp/include/powder/sim/: CAGrid.hpp  Checkpoint.hpp  DEM.hpp  FieldBuffers.hpp  FluidPDE.hpp  Granular.hpp  MaterialDB.hpp  ParticleGridCoupling.hpp  SimConfig.hpp  SpatialHashDEM.hpp  SubstepScheduler.hpp  ThermoChemStruct.hpp  WorldState.hpp
powder_cpp/src/: main.cpp
powder_cpp/src/app/: App.cpp  Cli.cpp  Console.cpp
powder_cpp/src/core/: BuildInfo.cpp  CpuFeatures.cpp  DeterministicBootstrap.cpp  KernelRegistry.cpp  Memory.cpp  RuntimePlacement.cpp
powder_cpp/src/render/: RenderStub.cpp  Renderer.cpp  RuntimeShell.cpp
powder_cpp/src/script/: LuaSandbox.cpp  ScriptStub.cpp
powder_cpp/src/sim/: CAGrid.cpp  Checkpoint.cpp  DEM.cpp  FluidPDE.cpp  Granular.cpp  MaterialDB.cpp  ParticleGridCoupling.cpp  SimConfig.cpp  SimStub.cpp  SpatialHashDEM.cpp  SubstepScheduler.cpp  ThermoChemStruct.cpp  WorldState.cpp
powder_cpp/tests/: CMakeLists.txt  phase2_core.cpp  phase3_core.cpp  phase4_core.cpp  phase5_core.cpp  phase6_core.cpp  phase7_core.cpp  smoke.cpp
scripts/: auto_extinguish.py  heatmap_overlay.py  lava_rain.py  lightning.py  plasma.py
simcore/: __init__.py  config.py  engine.py  logging.py  online_ressources.md  physics.py  port_project_to_cpp.md  scripting.py  simulation.py  state.py  ui.py  world.py
